--- a/_local/docker-compose.yml
+++ b/_local/docker-compose.yml
@@ -1,22 +1,12 @@
-  
+
 version: '3.1'
 
 services: 
-  db:
-    image: postgres
-    restart: always
-    ports:
-      - '5432:5432'
-    volumes:
-      - './pgdb:/var/lib/postgresql/data'
-    environment:
-      POSTGRES_PASSWORD: 12345
-      POSTGRES_USER: isguzar
-      POSTGRES_DB: isguzar
-
-
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
+    postgres:
+        image: postgres
+        restart: always
+        volumes:
+            - ../pgdb/:/var/lib/postgresql/data
+        ports:
+            - "5432:5432"
+        env_file: ../.env
