--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+Django==4.0.5
+django-tinymce==3.4.0
 djangorestframework==3.13.1
 Pillow==9.1.0
 psycopg2-binary==2.9.3
